--- a/apiKaryawan/src/main/resources/application.properties
+++ b/apiKaryawan/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port= 8881
+
 spring.datasource.url= jdbc:mysql://localhost:3306/apivaksin?useSSL=false
 spring.datasource.username= root
 spring.datasource.password= 
